[package]
name = "async-bb8-diesel"
description = "async bb8 connection manager for Diesel"
version = "0.1.0"
authors = ["Sean Klein <sean@oxide.computer>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/oxidecomputer/async-bb8-diesel"
keywords = ["diesel", "r2d2", "pool", "tokio", "async"]

[dependencies]
bb8 = "0.7"
async-trait = "0.1.52"
thiserror = "1.0"
tokio = { version = "1.17", default-features = false, features = [ "rt-multi-thread" ] }
tracing = { version = "0.1", optional = true }

[dependencies.diesel]
version = "2.0"
default-features = false
features = ["r2d2"]

[dev-dependencies]
tokio = { version = "1.17", features = [ "macros"] }

[dev-dependencies.diesel]
version = "2.0"
features = ["postgres", "r2d2"]

[patch.crates-io]
diesel = { git = 'https://github.com/diesel-rs/diesel.git', rev = 'b048d6e' }
